{
    "language": "Spanish",
    "sBnoUserWarning": "Ha de introducir un usuario",
    "labelUser": "Usuario",
    "buttonSubmitLogin": "Entrar",
    "sBErrorText": "Error",
    "renewButtonHint": "Actualizar",
    "bNBI_events": "Sucesos",
    "bNBI_message": "Mensaje",
    "bNBI_image": "Imagen",
    "bNBI_map": "Mapa",
    "dialogExitAppTitle": "¿Quiere salir de la App?",
    "dialogExitAppYes": "SÍ",
    "dialogExitAppNo": "NO",
    "msgType": "Atendido",
    "eventOpenedBy": "Suceso atendido por",
    "incidentCreatedBy": "Incidente creado por",
    "typification": "Tipificación",
    "localization": "Localización",
    "agencyAsigned": "Agencia asignada",
    "description": "Descripción",
    "code": "Código",
    "creation": "Creación",
    "direction": "Dirección",
    "sBTimeoutText": "No se ha podido acceder al servicio (Timeout)",
    "incidentsLabel": "Incidencias",
    "textFieldHintEnterMessage": "Introduzca su mensaje",
    "submitButtonMessageTab": "Entrar",
    "dialogExitAppContent": "Será desconectado del servicio",
    "sBnoImeiFail": "No se pudo obtener el IMEI del dispositivo",
    "refreshButtonMessage": "Refrescar",
    "noEventAssigned": "No hay eventos asignados",
    "messageType": "Tipo Msg",
    "eventId": "IdSuceso",
    "eventReference": "Referencia",
    "eventDescription": "Descripción",
    "landscapeTimeoutText": "No se ha podido acceder al servicio (Timeout)",
    "portraitTimeoutText": "No se ha podido acceder al servicio (Timeout)",
    "incidentsLabelNoConnection": "Incidentes (Sin conexión)"
}