import 'dart:ui';

class L10n{
  static final all = [
    const Locale('en'),
    const Locale('es'),
    const Locale('zh'),
  ];
}
//
// "language": "中文",
// "sBnoUserWarning": "您必须输入一个用户名",
// "labelUser": "User",
// "buttonSubmitLogin": "Login",
// "sBErrorText": "Error",
// "renewButtonHint": "Renew",
// "bNBI_events": "Events",
// "bNBI_message": "Message",
// "bNBI_image": "Image",
// "bNBI_map": "Map",
// "dialogExitAppTitle": "Do you want to exit the App?",
// "dialogExitAppYes": "YES",
// "dialogExitAppNo": "NO",
// "incidentsLabel": "Incidents",
// "textFieldHintEnterMessage": "Message",
// "submitButtonMessageTab": "Submit",
// "dialogExitAppContent": "You will be logged out of the service",
// "msgType": "Attended",
// "eventOpenedBy": "Event attended by",
// "incidentCreatedBy": "Incident created by",
// "typification": "Typification",
// "localization": "Localization",
// "agencyAsigned": "Agency asigned",
// "description": "Description",
// "code": "Code",
// "creation": "Creation",
// "direction": "Direction",
// "sBTimeoutText": "Service unreacheable (Timeout)",