...

    setState(() {
      // Si existe imagen presentamos la imagen
      if (pickedFile != null) {
        _image = File(pickedFile.path);
      } else {
        print('No image selected.');
      }
    });
  }

  Widget comprobarImagen() {
    if (_image != null) {
...
