...
                      Padding(
                        padding: const EdgeInsets.only(bottom: 45, top: 25, left: 15, right: 15),
                        child: TextField(
                            enabled: _isTextFieldEnable,
                            controller:textFieldController,
                            //la llave es necesaria para realizar el test de integración
                            key: Key('user'),
                            decoration: InputDecoration(
                              prefixIcon: Icon(Icons.account_circle),
                              border: OutlineInputBorder(),
                              labelText: 'Usuario',
                            ),
                            style:TextStyle(
...
